--- a/pages/7037.html
+++ b/pages/7037.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/6852/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/6852/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -480,7 +480,9 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>A <a class="existingWikiWord" href="/nlab/show/field+extension">field extension</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝔽</mi><mo stretchy="false">(</mo><msub><mi>ζ</mi> <mi>n</mi></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathbb{F}(\zeta_n)</annotation></semantics></math> by a <a class="existingWikiWord" href="/nlab/show/root+of+unity">root of unity</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ζ</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">\zeta_n</annotation></semantics></math>.</p>
+<p>A <a class="existingWikiWord" href="/nlab/show/field+extension">field extension</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝔽</mi><mo stretchy="false">(</mo><msub><mi>ζ</mi> <mi>n</mi></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathbb{F}(\zeta_n)</annotation></semantics></math> by a primitive <a class="existingWikiWord" href="/nlab/show/root+of+unity">root of unity</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ζ</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">\zeta_n</annotation></semantics></math>.</p>
+
+<p>The default meaning where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝔽</mi></mrow><annotation encoding="application/x-tex">\mathbb{F}</annotation></semantics></math> is left unspecified is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝔽</mi><mo>=</mo><mi>ℚ</mi></mrow><annotation encoding="application/x-tex">\mathbb{F} = \mathbb{Q}</annotation></semantics></math>, the field of <a class="existingWikiWord" href="/nlab/show/rational+numbers">rational numbers</a>, where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ζ</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">\zeta_n</annotation></semantics></math> may be taken to be <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>exp</mi><mo stretchy="false">(</mo><mn>2</mn><mi>π</mi><mi>i</mi><mo stretchy="false">/</mo><mi>n</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\exp(2\pi i/n)</annotation></semantics></math> (hence the smallest subfield of the <a class="existingWikiWord" href="/nlab/show/complex+numbers">complex numbers</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℂ</mi></mrow><annotation encoding="application/x-tex">\mathbb{C}</annotation></semantics></math> that contains this <a class="existingWikiWord" href="/nlab/show/exponential+function">exponential</a> value).</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -523,14 +525,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  7, 2018 at 08:40:34.
+  Last revised on October  7, 2018 at 09:51:42.
   See the <a href="https://ncatlab.org/nlab/history/cyclotomic field" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cyclotomic+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cyclotomic+field/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/cyclotomic+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cyclotomic+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/cyclotomic+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cyclotomic+field/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/cyclotomic+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cyclotomic+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/cyclotomic field/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
