--- a/pages/1866.html
+++ b/pages/1866.html
@@ -736,6 +736,7 @@ margin-left: 0em;
 <ul>
 <li><a href='#general'>General</a></li>
 <li><a href='#ReferencesSelfDuality'>Self-duality and quadratic form</a></li>
+<li><a href='#irrational_rrcharge'>Irrational RR-charge</a></li>
 </ul>
 </ul>
 </div>
@@ -886,20 +887,48 @@ margin-left: 0em;
 <ul>
 <li id="Szabo12"><a class="existingWikiWord" href="/nlab/show/Richard+Szabo">Richard Szabo</a>, section 3.6 and 4.6 of <em>Quantization of Higher Abelian Gauge Theory in Generalized Differential Cohomology</em> (<a href="http://arxiv.org/abs/1209.2530">arXiv:1209.2530</a>)</li>
 </ul>
+
+<h3 id="irrational_rrcharge">Irrational RR-charge</h3>
+
+<p>The observation that RR-charge may appear in <a class="existingWikiWord" href="/nlab/show/irrational+number">irrational</a> ratios is due to</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Constantin+Bachas">Constantin Bachas</a>, <a class="existingWikiWord" href="/nlab/show/Michael+Douglas">Michael Douglas</a>, <a class="existingWikiWord" href="/nlab/show/Christoph+Schweigert">Christoph Schweigert</a>, around (2.8) of <em>Flux Stabilization of D-branes</em>, JHEP 0005:048,2000 (<a href="https://arxiv.org/abs/hep-th/0003037">arXiv:hep-th/0003037</a>)</li>
+</ul>
+
+<p>In a sequence of followup articles, authors found this problematic and tried to make sense of it:</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Washington+Taylor">Washington Taylor</a>, <em>D2-branes in B fields</em>, JHEP 0007 (2000) 039 (<a href="https://arxiv.org/abs/hep-th/0004141">arXiv:hep-th/0004141</a>)</li>
+</ul>
+
+<blockquote>
+<p>In this article it was argued that the D0-brane charge arising from the integral over the D2-brane of the pullback of the B field is cancelled by the bulk contributions, but in this calculation it was implicitly assumed that the gauge field <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>C</mi> <mrow><mo stretchy="false">(</mo><mn>1</mn><mo stretchy="false">)</mo></mrow></msup></mrow><annotation encoding="application/x-tex">C^{(1)}</annotation></semantics></math> is constant. (from <a href="#Zhou01">Zhou 01</a>)</p>
+</blockquote>
+
+<ul>
+<li>
+<p>Peter Rajan, <em>D2-brane RR-charge on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SU</mi><mo stretchy="false">(</mo><mn>2</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SU(2)</annotation></semantics></math></em>, Phys.Lett. B533 (2002) 307-312 (<a href="https://arxiv.org/abs/hep-th/0111245">arXiv:hep-th/0111245</a>)</p>
+</li>
+
+<li id="Zhou01">
+<p>Jian-Ge Zhou, <em>D-branes in B Fields</em> (<a href="https://arxiv.org/abs/hep-th/0102178">arXiv:hep-th/0102178</a>)</p>
+</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 25, 2018 at 11:02:44.
+  Last revised on October  7, 2018 at 11:24:14.
   See the <a href="https://ncatlab.org/nlab/history/RR field" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/RR+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/RR+field/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/RR+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/RR+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/RR+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/RR+field/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/RR+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/RR+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/RR field/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
