--- a/pages/10167.html
+++ b/pages/10167.html
@@ -680,7 +680,7 @@ margin-left: 0em;
 <ul>
 <li><a href='#idea'>Idea</a></li>
 <li><a href='#consequences'>Consequences</a></li>
-<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#related_theorems'>Related theorems</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
 </div>
@@ -712,12 +712,16 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>I</mi></mrow><annotation encoding="application/x-tex">I</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/augmentation+ideal">augmentation ideal</a> of the <a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>.</p>
 
-<p>As explained in <a class="existingWikiWord" href="/nlab/show/Equivariant+stable+homotopy+theory">Equivariant stable homotopy theory</a>, there is a related characterization of the <a class="existingWikiWord" href="/nlab/show/K-homology">K-homology</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi><mi>G</mi></mrow><annotation encoding="application/x-tex">B G</annotation></semantics></math> as a <a class="existingWikiWord" href="/nlab/show/localization">localization</a>.</p>
-
-<h2 id="related_concepts">Related concepts</h2>
+<h2 id="related_theorems">Related theorems</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Baum-Connes+conjecture">Baum-Connes conjecture</a>, <a class="existingWikiWord" href="/nlab/show/Green-Julg+theorem">Green-Julg theorem</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Baum-Connes+conjecture">Baum-Connes conjecture</a>, <a class="existingWikiWord" href="/nlab/show/Green-Julg+theorem">Green-Julg theorem</a></p>
+</li>
+
+<li>
+<p>As explained in <em><a class="existingWikiWord" href="/nlab/show/Equivariant+stable+homotopy+theory">Equivariant stable homotopy theory</a></em>, there is a related characterization of the <a class="existingWikiWord" href="/nlab/show/K-homology">K-homology</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi><mi>G</mi></mrow><annotation encoding="application/x-tex">B G</annotation></semantics></math> as a <a class="existingWikiWord" href="/nlab/show/localization">localization</a>.</p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -751,14 +755,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  8, 2018 at 03:31:37.
+  Last revised on October  8, 2018 at 05:01:55.
   See the <a href="https://ncatlab.org/nlab/history/Atiyah-Segal completion theorem" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Atiyah-Segal+completion+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Atiyah-Segal+completion+theorem/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Atiyah-Segal+completion+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Atiyah-Segal+completion+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Atiyah-Segal+completion+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Atiyah-Segal+completion+theorem/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Atiyah-Segal+completion+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Atiyah-Segal+completion+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Atiyah-Segal completion theorem/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
