--- a/pages/19755.html
+++ b/pages/19755.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9112/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9112/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -491,7 +491,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>The set of <a class="existingWikiWord" href="/nlab/show/permutations">permutations</a> of a set, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math>, form a group, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>S</mi> <mi>X</mi></msub></mrow><annotation encoding="application/x-tex">S_X</annotation></semantics></math>, under composition. This is especially clear if one thinks of the permutation as a <a class="existingWikiWord" href="/nlab/show/bijection">bijection</a> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math>, where the multiplication / composition is just composition of functions. This group may be denoted <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>S</mi> <mi>X</mi></msub></mrow><annotation encoding="application/x-tex">S_X</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Σ</mi> <mi>X</mi></msub></mrow><annotation encoding="application/x-tex">\Sigma_X</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Sym</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Sym(X)</annotation></semantics></math>, or <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>!</mo></mrow><annotation encoding="application/x-tex">X!</annotation></semantics></math>.</p>
+<p>The set of <a class="existingWikiWord" href="/nlab/show/permutations">permutations</a> of a set, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math>, form a <a class="existingWikiWord" href="/nlab/show/group">group</a>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>S</mi> <mi>X</mi></msub></mrow><annotation encoding="application/x-tex">S_X</annotation></semantics></math>, under composition. This is especially clear if one thinks of the permutation as a <a class="existingWikiWord" href="/nlab/show/bijection">bijection</a> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math>, where the multiplication / composition is just composition of functions. This group may be denoted <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>S</mi> <mi>X</mi></msub></mrow><annotation encoding="application/x-tex">S_X</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Σ</mi> <mi>X</mi></msub></mrow><annotation encoding="application/x-tex">\Sigma_X</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Sym</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Sym(X)</annotation></semantics></math>, or <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>!</mo></mrow><annotation encoding="application/x-tex">X!</annotation></semantics></math>.</p>
 
 <p>When <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> is <a class="existingWikiWord" href="/nlab/show/the">the</a> <a class="existingWikiWord" href="/nlab/show/finite+set">finite set</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo><mo>=</mo><mo stretchy="false">{</mo><mn>1</mn><mo>,</mo><mi>…</mi><mo>,</mo><mi>n</mi><mo stretchy="false">}</mo></mrow><annotation encoding="application/x-tex">(n) = \{1,\dots,n\}</annotation></semantics></math>, then its symmetric group is a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> of <a class="existingWikiWord" href="/nlab/show/cardinality">cardinality</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>!</mo></mrow><annotation encoding="application/x-tex">n!</annotation></semantics></math> = “<math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/factorial">factorial</a>”, and one typically writes <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>S</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">S_n</annotation></semantics></math> or <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Σ</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">\Sigma_n</annotation></semantics></math>.</p>
 
@@ -560,7 +560,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/permutation">permutation</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/permutation">permutation</a>, <a class="existingWikiWord" href="/nlab/show/permutation+representation">permutation representation</a></p>
 </li>
 
 <li>
@@ -570,8 +570,16 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<p>Textbook accounts include</p>
+
 <ul>
-<li><a href="https://en.wikipedia.org/wiki/Symmetric_group">Symmetric group</a> in Wikipedia.</li>
+<li id="Sagan01">Bruce Sagan, <em>The symmetric group</em>, Springer 2001 (<a href="http://math.sfsu.edu/federico/Clase/RepTh/sagan.pdf">pdf</a>)</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Symmetric_group">Symmetric group</a></em></li>
 </ul>
 </body></html>
 
@@ -579,14 +587,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  8, 2018 at 03:00:53.
+  Last revised on October  8, 2018 at 08:49:41.
   See the <a href="https://ncatlab.org/nlab/history/symmetric group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/symmetric+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/symmetric+group/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/symmetric+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/symmetric+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/symmetric+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/symmetric+group/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/symmetric+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/symmetric+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/symmetric group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
